[gd_scene load_steps=8 format=2]

[ext_resource path="res://Title Screen.gd" type="Script" id=1]
[ext_resource path="res://sprites/Backgrounds/exitselected.png" type="Texture" id=2]
[ext_resource path="res://sprites/Backgrounds/colored_grass.png" type="Texture" id=3]
[ext_resource path="res://sprites/Backgrounds/titlescreen2.png" type="Texture" id=4]
[ext_resource path="res://sprites/Backgrounds/startgame.png" type="Texture" id=5]
[ext_resource path="res://sprites/Backgrounds/startgameselected.png" type="Texture" id=6]
[ext_resource path="res://sprites/Backgrounds/exit.png" type="Texture" id=7]

[node name="Title Screen" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.25, 0.703125 )
texture = ExtResource( 3 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 252.0
margin_top = 50.0
margin_right = 1028.0
margin_bottom = 670.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 776.0
margin_bottom = 80.0
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 164.0
margin_top = 96.0
margin_right = 612.0
margin_bottom = 224.0
size_flags_horizontal = 4

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 448.0
margin_bottom = 60.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 448.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 7 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
